# gity

./: .env.example  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  gemini.rs  git.rs  main.rs  ui.rs
