[package]
name = "gity"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
inquire = { version = "0.7", features = ["editor"] }
clap = { version = "4.5.54", features = ["derive"] }
directories = "6.0.0"
